fix(ui): multiple routes issue
